# RedBlackTree

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/actions/setup-deps/: action.yml
.github/badge/: mipt-badge.json
.github/workflows/: build.yml
include/: io_wrap.hpp  rbtree.hpp
source/: CMakeLists.txt  main.cpp
tests/e2e/: run.py
tests/unittests/: CMakeLists.txt
